--- a/src/components/ListMovie.css
+++ b/src/components/ListMovie.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   padding-top: 15px;
-  color: white;
+  color: black;
 }
 
 .lista-filmes {
@@ -15,11 +15,26 @@
   display: inline-block;
 }
 
-.lista-filmes h2 {
-  display: flex;
-  justify-content: center;
+.titulo-filme {
+  color: black;
+}
+.data-lacamento {
+  color: #646464;
 }
 
-.titulo-filme {
+.filtro-genero {
+  background-color: #861040;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.filtro-genero h2 {
+  color: white;
+}
+
+.filtro-genero p {
   color: white;
 }
