--- a/src/pages/Details.css
+++ b/src/pages/Details.css
@@ -1,26 +1,7 @@
-.button-home {
-  background-color: #eeaa74;
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition: 0.3s;
-  border-radius: 5px;
-  display: inline-block;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.button-home:hover {
-  background-color: #ee954b;
-}
-
 .detalhar-filme {
   padding: 10px;
   margin: 10px;
-  color: white;
+  color: black;
 }
 
 .img-filme {
