--- a/src/components/ListMovie.css
+++ b/src/components/ListMovie.css
@@ -5,6 +5,25 @@
   color: black;
 }
 
+.lista-genero {
+  list-style-type: none;
+  color: black;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.lista-genero li {
+  margin: 10px;
+  padding: 10px;
+}
+
+.lista-genero li span {
+  padding: 10px;
+  background-color: white;
+  border-radius: 5px;
+}
+
 .lista-filmes {
   display: flex;
   display: inline-block;
